Run Semeru CI after Temurin